--- a/config/real_nav_goals.yaml
+++ b/config/real_nav_goals.yaml
@@ -1,63 +1,52 @@
 real_nav_goals:
-  marker:
+  Q1:
     position:
-      x: -1.126
-      y: -0.050
-      z: 0.013
+      x: -1.581
+      y: 0.039
+      z: 0.017
     orientation:
-      x: 0.001
+      x: 0.002
+      y: -0.000
+      z: -0.018 
+      w: 1.000
+  Q2:
+    position:
+      x: -1.610
+      y: -1.159
+      z: 0.026
+    orientation:
+      x: -0.001
       y: -0.003
-      z: 0.999
-      w: -0.043
-  atdoor:
+      z: 0.010
+      w: 1.000
+  Q3:
     position:
-      x: -0.560
-      y: -0.152
-      z: 0.013
+      x: -0.069
+      y: -0.976
+      z: 0.033
     orientation:
-      x: -0.00
-      y: 0.001
-      z: -0.682
-      w: 0.731
-  postdoor:
+      x: -0.002
+      y: 0.003
+      z: 1.000
+      w: -0.020
+  center:
     position:
-      x: -0.538
-      y: -0.989
-      z: 0.004
-    orientation:
-      x: -0.003
-      y: -0.002
-      z: -0.728
-      w: 0.686
-  bin:
-    position:
-      x: -0.086
-      y: -1.155
-      z: 0.008
+      x: -0.665
+      y: -0.548
+      z: 0.019
     orientation:
       x: -0.003
-      y: -0.006
-      z: -0.432
-      w: 0.902
+      y: -0.001
+      z: -0.601
+      w: 0.799
   home:
     position:
-      x: 0
-      y: 0
-      z: 0
+      x: 0.045
+      y: 0.180
+      z: 0.015
     orientation:
-      x: 0.003
-      y: -0.012
-      z: -0.000
+      x: 0.002
+      y: -0.005
+      z: -0.010
       w: 1.000
-  table:
-    position:
-      x: -1.125
-      y: -0.076
-      z: -0.001
-    orientation:
-      x: 0.001
-      y: -0.003
-      z: 0.721
-      w: 0.693
-
     
