--- a/config/real_nav_goals.yaml
+++ b/config/real_nav_goals.yaml
@@ -1,62 +1,31 @@
 real_nav_goals:
-  Q1:
+  center1:
     position:
-      x: -1.581
-      y: 0.039
-      z: 0.017
+      x: -0.736
+      y: 0.169
+      z: 0.049
     orientation:
-      x: 0.002
-      y: -0.000
-      z: -0.018 
-      w: 1.000
-  Q2:
+      x: -0.000
+      y: 0.002
+      z: -0.693
+      w: 0.721
+  center2:
     position:
-      x: -1.610
-      y: -1.159
-      z: 0.026
+      x: -0.670
+      y: -0.869
+      z: 0.053
     orientation:
-      x: -0.001
-      y: -0.003
-      z: 0.010
-      w: 1.000
-  Q3:
-    position:
-      x: -0.069
-      y: -0.976
-      z: 0.033
-    orientation:
-      x: -0.002
-      y: 0.003
-      z: 1.000
-      w: -0.020
-  center:
-    position:
-      x: -0.665
-      y: -0.548
-      z: 0.019
-    orientation:
-      x: -0.003
-      y: -0.001
-      z: -0.601
-      w: 0.799
+      x: -0.004
+      y: -0.002
+      z: -0.692
+      w: 0.722
   home:
     position:
-      x: 0.045
-      y: 0.180
-      z: 0.015
+      x: -0.056
+      y: 0.216
+      z: 0.049
     orientation:
-      x: 0.002
-      y: -0.005
-      z: -0.010
-      w: 1.000
-  sphero:
-    position:
-      x: -0.401
-      y: -1.324
-      z: 0.037
-    orientation:
-      x: 0.002
-      y: -0.005
-      z: -0.010
-      w: 1.000
-    
+      x: 0.001
+      y: -0.006
+      z: 0.104
+      w: 0.995
