--- a/spherohunter_main/package.xml
+++ b/spherohunter_main/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>spherohunter</name>
+  <name>spherohunter_main</name>
   <version>0.0.0</version>
-  <description>The SpheroHunter Package</description>
+  <description>The SpheroHunter package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
